# ArabicPokerStudio-2

./: .gitattributes  .gitignore  .replit  ANDROID_SECURITY_GUIDE.md  LICENSE  MOBILE_APP_GUIDE.md  MOBILE_BUILD_GUIDE.md  README.md  USER_GUIDE.md  android-example-structure.txt  capacitor-bridge.ts  capacitor.config.ts  cookie.txt  cookies.txt  mobile-enhancements.js  mobile-styles.css  package-lock.json  package.json  pyproject.toml  replit.nix  start-python-server.sh  start_realtime_server.py  start_realtime_server.sh  tailwind.config.ts  theme.json  token.json  vite.config.ts
attached_assets/: (167) واتساب.html  Pasted---1743879083068.txt  Pasted---1744038991982.txt  Pasted--1-Backend-Node-js-Sock-1743623099124.txt  Pasted--1-Intro-Cinematic--1744306620487.txt  Pasted--Big-Bass-Slots-1-Main-Lobby--1744051234745.txt  Pasted--Crash-Rocket-Game-Crash-Game--1743885756322.txt  Pasted--Overview-Share-your-Replit-Apps-with-the-world-in-just-a-few-clicks-Replit-Deployments-le-1743390230977.txt  Pasted--Pharaoh-s-Book--1744234388460.txt  Pasted--Pharaoh-s-Book-slots--1744232915583.txt  Pasted--Poker-Masr--1744135508351.txt  Pasted--PokerActionButtons-PokerTable--1744070165034.txt  Pasted--Queen-of-Egypt-Slots-1-Main-Lobby-1743954999822.txt  Pasted--Queen-of-Egypt-Slots-1-Main-Lobby-1743956443357.txt  Pasted--import-useState-useEffect-useRef-from-react-import-useAuth-from-hooks-use-auth-im-1743397333454.txt  Pasted--poker-actions-container-width-100-padding-15px-border-radius-10px-margin-top--1744070024483.txt  content-1743962304445.md  content-1744053738060.md  (+9 more)
python/: run.py  (+5 more)
(+284 files in other folders)
