[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "numpy>=2.2.4",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]
